--- a/templates/resultado.html
+++ b/templates/resultado.html
@@ -15,7 +15,7 @@
 <body class="bg-gray-200 py-20">
     <div class="max-w-md mx-auto bg-white rounded-xl shadow-md overflow-hidden md:max-w-2xl p-8">
         <h1 class="text-2xl font-bold mb-4">Resultado de la predicción</h1>
-        <p class="text-lg mb-4">La predicción es: <span class="font-bold">{{ prediction }}</span></p>
+        <p class="text-lg mb-4">Según nuestro modelo, el equipo va a: <span class="font-bold">{{ prediction }}</span></p>
         <a href="/" class="text-indigo-600 hover:text-indigo-500">Otra predict de clash royale</a>
     </div>
 </body>
